--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,29 @@
     vertical-align: bottom;
 }
 
+#timeup,
 h1 {
     font-family: 'Marcellus SC', serif;
     font-size: 70px;
     color: #6c6f74;
+}
+
+#timeup {
+    margin: 20% 0;
+    display: none;
+}
+
+.mask {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(255, 248, 237, 0.6);
+    -webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+    opacity: 0;
+    display: none;
 }
 
 body {
@@ -50,6 +69,7 @@ p {
     grid-template-columns: 35% 65%;
     border-bottom: 1px solid #6c6f74;
     margin-bottom: 0px;
+    position: relative;
 }
 
 #goal {
@@ -68,69 +88,48 @@ p {
     margin: auto;
 }
 
-.slide {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    -moz-opacity: 0;
-    background: rgba(0, 0, 0, 0.6);
-    -webkit-transition: all 0.6s ease;
-    transition: all 0.6s ease;
-}
-
-
-}
 
 /* curved text */
+
 #curved {
     position: relative;
 }
+
 #arc {
     /* font-family: 'Marcellus SC', serif; */
-    
     font-family: 'Julius Sans One', sans-serif;
     position: absolute;
     /* letter-spacing: 2px; */
 }
+
 @media only screen and (max-width: 600px) {
     h1 {
         font-size: 48px;
     }
-    
     p {
         padding: 3px;
         font-size: 23px;
     }
-    
     .instructions {
         font-family: Ropa Sans;
         font-size: 10px;
         /* font-weight: bold; */
     }
-    
     .yum {
         height: 150px;
         width: 150px;
         flex-wrap: nowrap;
         display: inline-block;
     }
-    
     .container {
         padding: 2%;
     }
-    
     .flex-container {
         text-align: center
     }
-    
     #goal {
         padding: 0px auto;
     }
-    
     .wrapper {
         margin: auto;
         display: block;
