--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,7 @@ p {
         width: 200px;
         flex-wrap: nowrap;
         display: inline-block;
+        margin-right: 20px;
     }
     .container {
         padding: 2%;
