--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
 .btn {
-    background-color: #faf9f6;
+    /* background-color: #faf9f6; */
+    background-color: #fffbf5;
     border: none;
-    color: 6c6f74;
-    padding: 16px 32px;
+    color: #6c6f74;
+    padding: 15px 32px;
     text-align: center;
     font-size: 16px;
     margin: 4px 2px;
     opacity: 0.6;
     transition: 0.3s;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 25px;
+    font-family: 'Julius Sans One', sans-serif;
 }
 
 .btn:hover {
@@ -117,18 +122,6 @@ p {
     font-size: 30px;
 }
 
-#startbtn,
-#nextbtn {
-    background-color: #fff8ed;
-    border: none;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 25px;
-    font-family: 'Julius Sans One', sans-serif;
-}
-
 
 /* curved text */
 
@@ -140,18 +133,6 @@ p {
     font-family: 'Julius Sans One', sans-serif;
     position: absolute;
     /* letter-spacing: 2px; */
-}
-
-#startbtn,
-#nextbtn {
-    background-color: #fff8ed;
-    border: none;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 25px;
-    font-family: 'Julius Sans One', sans-serif;
 }
 
 @media only screen and (max-width: 600px) {
