--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,36 @@
+.circle {
+    position: absolute;
+    /* background-color: #f8dadf; */
+    background-color: #e0eeed;
+    /*   border: solid 1px #ccc; */
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
 .btn {
-    /* background-color: #faf9f6; */
-    background-color: #fffbf5;
-    border: none;
+    background-color: #dce6e6;
+    /* background-color: #e9f3f2; */
+    /* background-color: #eeeeee; */
     color: #6c6f74;
-    padding: 15px 32px;
     text-align: center;
     font-size: 16px;
-    margin: 4px 2px;
     opacity: 0.6;
     transition: 0.3s;
     text-decoration: none;
     display: inline-block;
     font-size: 25px;
     font-family: 'Julius Sans One', sans-serif;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    line-height: 100px;
 }
 
 .btn:hover {
-    opacity: 1
+    opacity: 1;
+    /* color: #ffffff; */
+    background-color: #fcf9f2;
 }
 
 .quizbox {
